.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0a5 - Unreleased
------------------

- Move `isExpiry` into `CMFPlone.utils` so it can be called directly,
  i.e. without searching the skin.
  [witsch]

- Removed redundant 'configlet' class from prefs_group_details.pt and 
  prefs_user_details.pt
  [spliter]

- Updated more prefs_* templates to follow recent markup conventions.
  References http://dev.plone.org/old/plone/ticket/9981
  [spliter]

- Removed deprecated 'sub' slot from discussionitem_view.pt.
  [spliter]

- Added a condition to the automatic loading of ZCML configuration (via the
  ``[z3c.autoinclude.plugin]`` ``target = plone`` entry point), so that it
  is possible to disable automatic loading. This is particularly useful in
  tests, where automatically included packages can cause leakage of state or
  unrelated errors if Plone's ZCML is loaded. To disable auto-inclusion, y
  you can add a ZCML statement like the following::
  
    <configure xmlns="http://namespaces.zope.org/zope"
               xmlns:meta="http://namespaces.zope.org/meta">
        <meta:provides feature="no-autoinclude" />
    </configure>
  
  You need to do this "early", i.e. before Plone's ZCML is loaded.
  [optilude]

- Fix a test regression in discussion_reply_form if the layout for the item being
  discussed has no content-core macro.  (Such as the link_redirect_view.py script
  for a Link item).
  [davisagli]

- Wrapped .contentViews and .contentActions with <div id="edit-bar"> in views.
  [spliter]

- Wrapped .contentViews and .contentActions with <div id="edit-bar"> in order
  to have consistent markup between classic and Sunburst themes.
  [spliter]

- Cleaned up some markup mess, #region-content, .documentContent were redundant,
  and were reduced to #content instead, to reduce confusion.