@@ -1168,33 +1168,8 @@ class PloneTool(PloneBaseTool, UniqueObject, SimpleItem):
 
     security.declarePublic('reindexOnReorder')
     def reindexOnReorder(self, parent):
-        """ Catalog ordering support """
-
-        # For now we will just reindex all objects in the folder. Later we may
-        # optimize to only reindex the objs that got moved. Ordering is more
-        # for humans than machines, therefore the fact that this won't scale
-        # well for btrees isn't a huge issue, since btrees are more for
-        # machines than humans.
-        mtool = getToolByName(self, 'portal_membership')
-        if not mtool.checkPermission(ModifyPortalContent, parent):
-            return
-        cat = getToolByName(self, 'portal_catalog')
-        cataloged_objs = cat(path = {'query':'/'.join(parent.getPhysicalPath()),
-                                     'depth': 1})
-        for brain in cataloged_objs:
-            # Don't crash when the catalog contains a stale entry
-            try:
-                obj = brain.getObject()
-            except (KeyError, AttributeError): # getObject raises since Zope 2.8
-                obj = None
-
-            if obj is not None:
-                cat.reindexObject(obj,['getObjPositionInParent'],
-                                                    update_metadata=0)
-            else:
-                # Perhaps we should remove the bad entry as well?
-                log('Object in catalog no longer exists, cannot reindex: %s.'%
-                                    brain.getPath())
+        """ reindexing of "gopip" isn't needed any longer :) """
+        pass
 
     security.declarePublic('isIDAutoGenerated')
     def isIDAutoGenerated(self, id):
